--- a/src/app/features/clientes/clientes-detail.page.html
+++ b/src/app/features/clientes/clientes-detail.page.html
@@ -48,7 +48,7 @@
   <!-- Vista CARDS -->
   <!-- Vista CARDS -->
   <div *ngIf="view()==='cards'">
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-6">
+    <div class="grid grid-cols-1 md:grid-cols-2 2xl:grid-cols-3 gap-6">
       <div *ngFor="let c of filtered()"
         class="relative flex flex-col rounded-2xl border border-zinc-100 bg-white p-6 shadow-[0_2px_8px_rgba(0,0,0,0.04)] hover:shadow-[0_4px_12px_rgba(0,0,0,0.08)] transition-shadow duration-300">
 
