--- a/src/app/features/clientes/clientes.page.html
+++ b/src/app/features/clientes/clientes.page.html
@@ -98,7 +98,7 @@
 
   <!-- VISTA CARDS -->
   <div *ngIf="view()==='cards'">
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-6">
+    <div class="grid grid-cols-1 md:grid-cols-2 2xl:grid-cols-3 gap-6">
       <div *ngFor="let c of filtered()"
         class="relative flex flex-col card hover:shadow-[0_4px_12px_rgba(0,0,0,0.08)] transition-shadow duration-300">
         <!-- Header Card -->
@@ -159,7 +159,7 @@
           No se encontraron clientes que coincidan con tu búsqueda.
         </div>
       </div>
-      <div *ngIf="loading()" class="col-span-full grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-6">
+      <div *ngIf="loading()" class="col-span-full grid grid-cols-1 md:grid-cols-2 2xl:grid-cols-3 gap-6">
         <div *ngFor="let i of [1,2,3,4,5,6,7,8]"
           class="rounded-2xl border border-zinc-200 bg-white p-6 h-[320px] flex flex-col justify-between">
           <div class="space-y-4">
