--- a/src/app/layout/app-shell.component.html
+++ b/src/app/layout/app-shell.component.html
@@ -1,32 +1,22 @@
 <!-- Topbar fija -->
-<app-topbar
-  class="fixed inset-x-0 top-0 z-40 h-14"
-  (openDrawer)="toggleDrawer()">
+<app-topbar class="fixed inset-x-0 top-0 z-40 h-14" (openDrawer)="toggleDrawer()">
 </app-topbar>
 
 <!-- Sidebar fija -->
-<div 
-  *ngIf="!shouldHideSidebar()"
-  class="hidden md:block fixed left-0 top-14 z-30 w-64 h-[calc(100svh-3.5rem)] bg-white border-r border-zinc-200"
->
+<div *ngIf="!shouldHideSidebar()"
+  class="hidden md:block fixed left-0 top-14 z-30 w-64 h-[calc(100svh-3.5rem)] bg-white border-r border-zinc-200">
   <app-sidebar></app-sidebar>
 </div>
 
 <!-- CONTENIDO PRINCIPAL -->
-<div 
-  class="pt-14 min-h-[calc(100svh-3.5rem)]"
-  [ngClass]="{
+<div class="pt-14 min-h-[calc(100svh-3.5rem)]" [ngClass]="{
     'md:pl-64 bg-white': !shouldHideSidebar(),
     'bg-[var(--bg-main)]': shouldHideSidebar()
-  }"
->
-  <div 
-    class="mx-auto px-4 md:px-6"
-    [ngClass]="{
-      'max-w-[1600px]': !shouldHideSidebar(),
-      'max-w-[900px]': shouldHideSidebar()
-    }"
-  >
+  }">
+  <div class="mx-auto px-4 md:px-8" [ngClass]="{
+      'max-w-[1800px]': !shouldHideSidebar(),
+      'max-w-[1000px]': shouldHideSidebar()
+    }">
     <main class="pb-10">
       <router-outlet></router-outlet>
     </main>
@@ -37,11 +27,8 @@
 <div *ngIf="open()" class="fixed inset-0 z-40 md:hidden">
   <div class="absolute inset-0 bg-black/40" (click)="closeDrawer()"></div>
 
-  <div
-    *ngIf="!shouldHideSidebar()"
-    class="absolute left-0 top-0 h-full w-72 bg-white shadow-xl 
-           animate-slide-right overflow-y-auto"
-  >
+  <div *ngIf="!shouldHideSidebar()" class="absolute left-0 top-0 h-full w-72 bg-white shadow-xl 
+           animate-slide-right overflow-y-auto">
     <app-sidebar></app-sidebar>
   </div>
 </div>
